# internal/server/polymarket/polymarket.go
@@ -27,6 +27,30 @@ func (s *Server) GetPolymarketStatus(ctx context.Context, _ *polymarketpkg.GetPo
 	return client.GetPolymarketStatus(ctx, &polymarketapiclient.GetPolymarketStatusRequest{})
 }
 
+func (s *Server) ListPolymarketHotMarkets(ctx context.Context, req *polymarketpkg.ListPolymarketHotMarketsRequest) (*polymarketpkg.ListPolymarketHotMarketsResponse, error) {
+	closer, client, err := s.polymarketClientSet.NewPolymarketServiceClient()
+	if err != nil {
+		return nil, err
+	}
+	defer closer.Close()
+
+	resp, err := client.ListPolymarketHotMarkets(ctx, &polymarketapiclient.ListPolymarketHotMarketsRequest{
+		Limit: req.GetLimit(),
+	})
+	if err != nil {
+		return nil, err
+	}
+
+	return &polymarketpkg.ListPolymarketHotMarketsResponse{
+		Items:            resp.GetItems(),
+		FetchedAt:        resp.GetFetchedAt(),
+		Stale:            resp.GetStale(),
+		MonitoredMarkets: resp.GetMonitoredMarkets(),
+		MonitoredTokens:  resp.GetMonitoredTokens(),
+		CandidateCount:   resp.GetCandidateCount(),
+	}, nil
+}
+
 func (s *Server) ListPolymarketSportsLiveMarkets(ctx context.Context, req *polymarketpkg.ListPolymarketSportsLiveMarketsRequest) (*polymarketpkg.ListPolymarketSportsLiveMarketsResponse, error) {
 	closer, client, err := s.polymarketClientSet.NewPolymarketServiceClient()
 	if err != nil {
